--- a/style.css
+++ b/style.css
@@ -7,17 +7,18 @@ p {
   margin-left: 3rem;
 }
 .illustration {
-  height: 300px;
-  width: 400px;
+  height: 200px;
+  width: 300px;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-right: 40px;
+  margin-right: 10px;
   border-radius: 5px;
   border: 2px solid red;
   border-right: 3px solid rgb(2, 2, 92);
   border-radius: 0px 10px 10px 00px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
   border-left: 15px red solid;
+  grid-area:img;
   /* animation: fadeIn 2s ease-in-out;
   animation-timeline: view(); */
 }
@@ -36,7 +37,7 @@ header {
   border-bottom: 3px solid red;
 }
 .logo {
-  width: 70%;
+  width: 50%;
 }
 .logo img {
   width: 10rem;
@@ -75,12 +76,12 @@ h3 {
 main h3 {
   color: rgb(2, 2, 92);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 2rem;
+  font-size: 1.8rem;
   justify-items: center;
 }
 main h2 {
   color: rgb(2, 2, 92);
-  font-size: 2rem;
+  font-size: 1.9rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 80%;
   text-align: center;
@@ -89,36 +90,35 @@ main h2 {
 .uiUX,
 .graphIdVisuel {
   display: grid;
-  justify-items: start;
+  justify-items: center;
   margin-top: 3px;
   margin-bottom: 30px;
   margin-left: 20px;
   width: 90%;
+  grid-template-rows:1fr 1fr 1fr;
+  grid-template-columns:1fr 1fr;
+  grid-template-areas:
+    "h5 h5"
+    "p img"
+    "btn btn"
+  ;
 }
 #container {
   display: flex;
   justify-items: center;
-  gap: 30px;
+  gap: 10px;
 }
 .devWebMobile h5,
 .graphIdVisuel h5,
-.val-container h5 {
+.val-container h5,
+.uiUX h5{
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.8rem;
   color: red;
   padding-left: 10px;
   margin-left: 10px;
   margin-bottom: 5px;
-}
-.uiUX h5 {
-  display: grid;
-  justify-content: end;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.8rem;
-  color: red;
-  padding-left: 10px;
-  margin-left: 100px;
-  margin-bottom: 5px;
+  grid-area:h5;
 }
 .devWebMobile p,
 .uiUX p,
@@ -142,6 +142,7 @@ main h2 {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  grid-area:btn;
 }
 #btn:hover {
   background-color: red;
@@ -198,9 +199,87 @@ footer p {
     opacity: 0;
   }
 }
+@mesia screen and (max-width:480px) {
+ body {
+    width: 80%;
+  }
+  p {
+    font-size: 1.1rem;
+    margin-left: 0.5rem;
+  }
+  span {
+    display: grid;
+  }
+  header {
+    width: 100%;
+    height: auto;
+    padding: 10px 0;
+    gap: 10px;
+  }
+  .nav {
+    display: none;
+  }
+  .devWebMobile,
+  .uiUX,
+  .graphIdVisuel,
+  .val-container {
+    display: grid;
+    margin-left: 5px;
+    width: 70%;
+  }
+  .illustration {
+    display: none;
+  }
+  main {
+    margin: 0;
+  }
+  main h3 {
+    font-size: 1.3rem;
+  }
+  .devWebMobile h5,
+  .graphIdVisuel h5,
+  .val-container h5,
+  .uiUX h5 {
+    margin-left: 5px;
+    font-size: 1.1rem;
+  }
+  .devWebMobile p,
+  .uiUX p,
+  .graphIdVisuel p,
+   {
+    font-size: 1rem;
+    margin-left: 5px;
+    width: 40%;
+  }
+  .choice p,
+  .projects p {
+    font-size: 1.1rem;
+    margin-left: 5px;
+    width:85%;
+  #btn {
+    margin: 30px 5px;
+    padding: 8px 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+  }
+    footer{
+      display:grid;
+    }
+  .foot {
+    gap: 15px;
+    display: grid;
+  }
+  .foot a {
+    font-size: 0.9rem;
+  }
+  footer p {
+    font-size: 1rem;
+  }
+}
 @media screen and (max-width: 768px) {
   body {
-    width: 100vw;
+    width: 90%;
   }
   p {
     font-size: 1.2rem;
@@ -337,6 +416,7 @@ footer p {
     font-size: 1rem;
   }
 }
+
 
 
 
